--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -28,14 +28,14 @@
     <artifactId>integration-templates</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <url>http://wso2.org</url>
 
     <scm>
         <url>https://github.com/wso2-extensions/identity-integration-ui-templates.git</url>
         <developerConnection>scm:git:https://github.com/wso2-extensions/identity-integration-ui-templates.git</developerConnection>
         <connection>scm:git:https://github.com/wso2-extensions/identity-integration-ui-templates.git</connection>
-        <tag>HEAD</tag>
+        <tag>integration-templates-1.0.4</tag>
     </scm>
 
     <distributionManagement>
@@ -79,6 +79,26 @@
                                 <replacement>$1</replacement>
                                 <failIfNoMatch>true</failIfNoMatch>
                             </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>zip.xml</descriptor>
+                        </descriptors>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <skipAssembly>true</skipAssembly>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>make-assembly</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
