--- a/integrations/applications/custom-application/pom.xml
+++ b/integrations/applications/custom-application/pom.xml
@@ -40,7 +40,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <skipAssembly>true</skipAssembly>
+                    <skipAssembly>false</skipAssembly>
                 </configuration>
             </plugin>
             <plugin>
