--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -58,6 +58,7 @@
         <module>applications/mobile-application</module>
         <module>applications/single-page-application</module>
         <module>applications/traditional-web-application</module>
+        <module>applications/salesforce</module>
     </modules>
 
     <build>
