--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -59,6 +59,8 @@
         <module>applications/single-page-application</module>
         <module>applications/traditional-web-application</module>
         <module>applications/salesforce</module>
+        <module>applications/google-workspace</module>
+        <module>applications/microsoft-365</module>
     </modules>
 
     <build>
