--- a/tools/sandbox/apps/markdown-editor/package.json
+++ b/tools/sandbox/apps/markdown-editor/package.json
@@ -8,7 +8,7 @@
     "license": "Apache-2.0",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build",
+        "build": "pnpm lint && tsc -b && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
