--- a/integrations/applications/expressjs-application/pom.xml
+++ b/integrations/applications/expressjs-application/pom.xml
@@ -24,8 +24,8 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
-    <name>nodejs-application</name>
-    <artifactId>org.wso2.carbon.identity.integration.ui.templates.applications.nodejs-application</artifactId>
+    <name>expressjs-application</name>
+    <artifactId>org.wso2.carbon.identity.integration.ui.templates.applications.expressjs-application</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <url>http://wso2.org</url>
