--- a/integrations/applications/vc-client-application/pom.xml
+++ b/integrations/applications/vc-client-application/pom.xml
@@ -24,7 +24,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
-    <name>mcp-client-application</name>
+    <name>vc-client-application</name>
     <artifactId>org.wso2.carbon.identity.integration.ui.templates.applications.vc-client-application</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
